# advanced-programming

./: .gitignore  CMakeLists.txt  GameOfLifeOnConsole.cpp  README.md  gameoflife.md  main.cpp  test  test_grid.txt  todos.md  tree.txt
docs/: class_design.md  gameoflife.md  todos.md
include/: Cell.h  Game.h  GameOfLife.h  Grid.h  Workflow.h
input/: glider_test.pbm  glider_test.txt  next_state_test.pbm  next_state_test.txt  next_state_test_expected.pbm  next_state_test_expected.txt  spaceship_test.pbm  wikipedia_test.pbm  wikipedia_test.txt
src/: Cell.cpp  Game.cpp  GameOfLife.cpp  GameOfLifeOnConsole.cpp  Grid.cpp  Workflow.cpp  main.cpp  spaceship_test.txt
test/: game_tests.cpp
